last of bugfixes for this iteration, min sizes for slideshow and title work, slideshow is larger (zooms in on small images so they fill the full height of slideshow)

--- a/myapp/static/myapp/css/all.css
+++ b/myapp/static/myapp/css/all.css
@@ -72,6 +72,7 @@ svg:hover {
     font-size: 0.8em;
     display: flex;
     justify-content: center;
+    min-width: 300px;
 }
 
 #links > a {
@@ -175,6 +176,10 @@ footer {
     width: 16.5px;
     position: relative;
     top: -10%;
+  }
+
+  h1 {
+    min-width: 300px;
   }
     
 }
