--- a/myapp/static/myapp/css/home.css
+++ b/myapp/static/myapp/css/home.css
@@ -3,6 +3,7 @@
   height: calc(100vh - (0.14745308311 * 480px * 2) - 40px);
   max-height: 750px;
   min-height: 400px;
+  min-width: 300px;
   width: 100%;
   position: relative;
 }
@@ -12,6 +13,7 @@
   width: 100%;
   max-height: 750px;
   min-height: 400px;
+  min-width: 300px;
   opacity: 0;
   position: absolute;
   top: 0;
@@ -23,7 +25,9 @@
   max-height: 100%;
   padding-left: 20px;
   padding-right: 20px;
-  height: auto;
+  object-fit: contain;
+  height: 100%;
+  width: 100%;
 
   position: absolute;
   top: 50%;
